<resources>
    <string name="app_name">Eve - The ISA MPSTME App</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="continue_ek1_string">Continue</string>
    <string name="skip_ek1_string">Skip</string>
    <string name="email_ek1_string">Email</string>
    <string name="please_enter_your_email_string">Please Enter your Email</string>
    <string name="name_string">Name</string>
    <string name="please_enter_your_name_string">Please Enter your Name</string>
    <string name="add_biometric_ek1_string">Add Biometric</string>
    <string name="or_string">or</string>
    <string name="add_password_ek1_string">Add Password</string>
    <string name="next_ek1_string">Next</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="please_confirm_your_password_string">Please confirm your password</string>
    <string name="password_ek1_string">Password</string>
    <string name="please_enter_your_password_string">Please enter your password</string>
    <string name="legality_string">By providing my phone number, I hereby agree and accept the Terms of Service and Privacy Policy in use of the EVE app.</string>
    <string name="enter_your_phone_number_string">Enter Your Phone Number</string>
    <string name="you_will_receive_a_6_digit_verification_code_string">You will receive a 6-digit verification code</string>
    <string name="please_enter_your_country_code__and_phone_number_string">Please enter your country code and phone number</string>
    <string name="generate_otp_ek1_string">Generate OTP</string>
    <string name="or_ek1_string">or</string>
    <string name="__91_string">+91</string>
    <string name="sign_in_with_google_string">Sign-in with Google</string>
    <string name="verify___continue_string">VERIFY &amp; CONTINUE</string>
    <string name="otp_verification_string">OTP Verification</string>
    <string name="enter_otp_sent_to__91_5678493982_string">Enter OTP sent to +91 5678493982</string>
    <string name="didn_t_receive_otp__resend_string">Didnt Receive OTP? RESEND</string>
    <string name="_00_60_string">00:60</string>
    <string name="cancel_string">CANCEL</string>
    <string name="contacts_string">Contacts</string>
    <string name="location_string">Location</string>
    <string name="sos_string">SOS</string>
    <string name="cancel_ek1_string">CANCEL</string>
    <string name="contacts_ek1_string">Contacts</string>
    <string name="location_ek1_string">Location</string>
    <string name="sos_ek1_string">SOS</string>
    <string name="top_contacts_string">Top Contacts</string>
    <string name="_1_string">1</string>
    <string name="_2_string">2</string>
    <string name="_3_string">3</string>
    <string name="_4_string">4</string>
    <string name="_5_string">5</string>
    <string name="mom_string">MOM</string>
    <string name="dad_string">DAD</string>
    <string name="police_string">POLICE</string>
    <string name="ambulance_string">AMBULANCE</string>
    <string name="fire_string">FIRE</string>
    <string name="search_string">Search</string>
    <string name="sos_ek2_string">SOS</string>
    <string name="to___string">To :</string>
    <string name="enter_location_string">Enter location</string>
    <string name="__from___string"> From :</string>
    <string name="your_location_string">Your Location</string>
    <string name="search_ek1_string">Search</string>
    <string name="sos_ek3_string">SOS</string>
    <string name="title_string">EVE</string>
    <string name="home_string">Home</string>
    <string name="profile_string">Profile</string>
    <string name="history_string">FAQ</string>
    <string name="setting_string">Settings</string>
    <string name="about_string">Privacy Policy</string>
    <string name="i_m_post_title__plea_string">Hello Eve ,Good morning! </string>
    <string name="i_m_post_title__plea_ek1_string">NAVIGATION</string>
    <string name="i_m_post_title__plea_ek2_string">MY CONTACTS</string>
    <string name="i_m_post_title__plea_ek3_string">FAKE CALL</string>
    <string name="i_m_post_title__plea_ek4_string">SOS MESSAGE</string>
    <string name="sos_ek4_string">SOS</string>
    <string name="eve_string">EVE</string>
    <string name="from_isa_mpstme_string">FromISA MPSTME</string>
    <string name="_1_ek1_string">1</string>
    <string name="_2_ek1_string">2</string>
    <string name="_3_ek1_string">3</string>
    <string name="_4_ek1_string">4</string>
    <string name="_5_ek1_string">5</string>
    <string name="done_ek1_string">DONE</string>
    <string name="message_sent_ek1_string">MESSAGE SENT</string>
    <string name="top_contacts_ek1_string">Top Contacts</string>
    <string name="eve_ek1_string">EVE</string>
    <string name="my_contacts_ek1_string">MY CONTACTS</string>
    <string name="___string">+</string>
    <string name="done_ek2_string">DONE</string>
    <string name="___ek1_string">-</string>
    <string name="_1___name______phone_number__string">1. Name Phone Number </string>
    <string name="___ek2_string">-</string>
    <string name="_1___name______phone_number__ek1_string">1. Name Phone Number </string>
    <string name="___ek3_string">-</string>
    <string name="_1___name______phone_number__ek2_string">1. Name Phone Number </string>
    <string name="___ek4_string">-</string>
    <string name="_1___name______phone_number__ek3_string">1. Name Phone Number </string>
    <string name="___ek5_string">-</string>
    <string name="_1___name______phone_number__ek4_string">1. Name Phone Number </string>
    <string name="eve_ek2_string">EVE</string>
</resources>